--- a/app/views/teams/member/_member_info.html.erb
+++ b/app/views/teams/member/_member_info.html.erb
@@ -34,6 +34,40 @@
         <p class="my-1 text-soft">Season hasn't started yet.</p>
       <% end %>
     </div>
+
+    <!-- Current Streak Card -->
+    <% current_streak_data = member.current_streak(team) %>
+    <% current_streak = current_streak_data[:streak] %>
+    <% current_streak_start_date = current_streak_data[:start_date] %>
+    <% current_streak_end_date = current_streak_data[:end_date] %>
+
+    <div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+      <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Current Streak</h2>
+      <p class="text-3xl font-bold">
+        <%= current_streak %>
+        <span class="text-base font-normal text-soft"><%= 'day'.pluralize(current_streak) %></span>
+      </p>
+      <p class="my-1 text-soft">
+        <%= precise_pretty_date(current_streak_start_date) %> &ndash; <%= precise_pretty_date(current_streak_end_date) %>
+      </p>
+    </div>
+
+    <!-- Longest Streak Card -->
+    <% longest_streak_data = member.longest_streak(team) %>
+    <% longest_streak = longest_streak_data[:streak] %>
+    <% longest_streak_start_date = longest_streak_data[:start_date] %>
+    <% longest_streak_end_date = longest_streak_data[:end_date] %>
+
+    <div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+      <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Longest Streak</h2>
+      <p class="text-3xl font-bold">
+        <%= longest_streak %>
+        <span class="text-base font-normal text-soft"><%= 'day'.pluralize(longest_streak) %></span>
+      </p>
+      <p class="my-1 text-soft">
+        <%= precise_pretty_date(longest_streak_start_date) %> &ndash; <%= precise_pretty_date(longest_streak_end_date) %>
+      </p>
+    </div>
   </div>
 
   <!-- Personal Mileage Goal Card -->
