--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -1,4 +1,4 @@
-<div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
+<div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
   <h1 class="heading">Account</h1>
   <p class="text-soft">Edit your account details.</p>
 </div>
@@ -7,15 +7,15 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="my-6">
-    <h2 class="font-normal text-lg text-slate-700 dark:text-slate-200 mb-2">Profile</h2>
+    <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Profile</h2>
     <p class="text-sm text-slate-600 dark:text-slate-400">This information will be visible to other users.</p>
   </div>
 
   <div class='form-group'>
     <%= f.label :username, class: "form-label" %>
     <%= f.text_field :username, autocomplete: 'username', class: "form-input", data: { form_validation_target: "username", action: "input->form-validation#validateUsername" } %>
-    <p class="help-text my-1">Your username is unique to you and is used to identify your account.</p>
-    <span class="error-message hidden my-1" data-form-validation-target="usernameError">Username can only contain lowercase letters, numbers, underscores, and periods and must be at least 3 characters long</span>
+    <p class="my-1 help-text">Your username is unique to you and is used to identify your account.</p>
+    <span class="hidden my-1 error-message" data-form-validation-target="usernameError">Username can only contain lowercase letters, numbers, underscores, and periods and must be at least 3 characters long</span>
   </div>
 
   <div class="form-group">
@@ -25,8 +25,8 @@
       </p>
     <% end %>
     <%= f.text_field :display_name, class: "form-input", data: { form_validation_target: "displayName", action: "input->form-validation#validateDisplayName" } %>
-    <p class="help-text my-1">Your display name is not unique and can be added to help other users recognize you.</p>
-    <span class="error-message hidden my-1" data-form-validation-target="displayNameError">Display name must be 100 characters or less</span>
+    <p class="my-1 help-text">Your display name is not unique and can be added to help other users recognize you.</p>
+    <span class="hidden my-1 error-message" data-form-validation-target="displayNameError">Display name must be 100 characters or less</span>
   </div>
 
   <div data-controller="image-preview" class="form-group">
@@ -50,14 +50,14 @@
   </div>
 
   <div class="py-10 mt-6 border-t border-slate-200 dark:border-slate-700">
-    <h2 class="font-normal text-lg text-slate-700 dark:text-slate-200 mb-2">Contact information</h2>
+    <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Contact information</h2>
     <p class="text-sm text-slate-600 dark:text-slate-400">Choose whether this information will be visible to other users.</p>
   </div>
 
   <div class='form-group'>
     <%= f.label :email, class: "form-label" %>
     <%= f.email_field :email, autocomplete: "email", class: "form-input", data: { form_validation_target: "email", action: "input->form-validation#validateEmail" } %>
-    <span class="error-message hidden my-1" data-form-validation-target="emailError">Invalid email address</span>
+    <span class="hidden my-1 error-message" data-form-validation-target="emailError">Invalid email address</span>
     <div class="flex items-center gap-2 mt-2">
       <%= hidden_field_tag 'user[settings][email_visible]', 'false' %>
       <%= f.fields_for :settings do |settings_form| %>
@@ -74,7 +74,7 @@
       </p>
     <% end %>
     <%= f.telephone_field :phone_number, autocomplete: 'tel', class: 'form-input', data: { form_validation_target: "phone", action: "input->form-validation#validatePhone input->form-validation#filterPhoneInput" } %>
-    <span class="error-message hidden my-1" data-form-validation-target="phoneError">Invalid phone number</span>
+    <span class="hidden my-1 error-message" data-form-validation-target="phoneError">Invalid phone number</span>
     <div class="flex items-center gap-2 mt-2">
       <%= hidden_field_tag 'user[settings][phone_visible]', 'false' %>
       <%= f.fields_for :settings do |settings_form| %>
@@ -85,7 +85,7 @@
   </div>
 
   <div class="py-10 mt-6 border-t border-slate-200 dark:border-slate-700">
-    <h2 class="font-normal text-lg text-slate-700 dark:text-slate-200 mb-2">Personal details</h2>
+    <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Personal details</h2>
     <p class="text-sm text-slate-600 dark:text-slate-400">This information will only be visible to your coaches and other team members.</p>
   </div>
 
@@ -98,24 +98,24 @@
 
     <% if resource.any_teams_require_gender? %>
       <%= f.select :gender, User.genders.keys.map { |gender| [gender.humanize, gender] }, {}, class: 'form-select' %>
-      <p class="help-text my-1">You are a member of <%= pluralize(resource.teams_requiring_gender.count, 'team that requires its members', 'teams that require their members') %> to specify their gender:</p>
+      <p class="my-1 help-text">You are a member of <%= pluralize(resource.teams_requiring_gender.count, 'team that requires its members', 'teams that require their members') %> to specify their gender:</p>
 
-      <ul class="list-disc pl-4 help-text my-1">
+      <ul class="pl-4 my-1 list-disc help-text">
         <%= resource.teams_requiring_gender.map { |team| content_tag(:li, link_to(team.name, team, class: 'btn-link')) }.join.html_safe %>
       </ul>
 
-      <p class="help-text my-1">You must leave <%= resource.teams_requiring_gender.count == 1 ? 'this team' : 'these teams' %> to remove your gender.</p>
+      <p class="my-1 help-text">You must leave <%= resource.teams_requiring_gender.count == 1 ? 'this team' : 'these teams' %> to remove your gender.</p>
     <% else %>
       <%= f.select :gender, [['Prefer not to answer', '']].concat(User.genders.keys.map { |gender| [gender.humanize, gender] }), {}, class: 'form-select' %>
     <% end %>
   </div>
 
   <div class="py-10 mt-6 border-t border-slate-200 dark:border-slate-700">
-    <h2 class="font-normal text-lg text-slate-700 dark:text-slate-200 mb-2">Password</h2>
+    <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Password</h2>
     <p class="text-sm text-slate-600 dark:text-slate-400">Leave the fields below blank if you don't want to change your password.</p>
   </div>
 
-  <div class='form-group relative'>
+  <div class='relative form-group'>
     <%= f.label :password, class: "form-label" do %>
       <p> New password
         <span class="help-text">(optional)</span>
@@ -129,21 +129,21 @@
         <%= inline_svg_tag 'icons/eye-slash.svg', data: { password_visibility_target: 'hiddenIcon' }, class: 'size-6 hidden' %>
       </button>
     </div>
-    <p class="help-text my-1">Leave this blank if you don't want to change your password.</p>
+    <p class="my-1 help-text">Leave this blank if you don't want to change your password.</p>
 
     <div class="hidden" data-form-validation-target="passwordRequirements">
-      <p class="help-text my-1">Password must contain:</p>
+      <p class="my-1 help-text">Password must contain:</p>
       <div class="ml-3">
-        <p class="help-text my-1" data-form-validation-target="passwordLength"><span class="hidden" data-form-validation-target="lengthCheck">&#10004;</span> <span class="hidden" data-form-validation-target="lengthCross">&times;</span> At least 6 characters</p>
-        <p class="help-text my-1" data-form-validation-target="passwordUppercase"><span class="hidden" data-form-validation-target="uppercaseCheck">&#10004;</span> <span class="hidden" data-form-validation-target="uppercaseCross">&times;</span> At least 1 uppercase letter</p>
-        <p class="help-text my-1" data-form-validation-target="passwordLowercase"><span class="hidden" data-form-validation-target="lowercaseCheck">&#10004;</span> <span class="hidden" data-form-validation-target="lowercaseCross">&times;</span> At least 1 lowercase letter</p>
-        <p class="help-text my-1" data-form-validation-target="passwordDigit"><span class="hidden" data-form-validation-target="digitCheck">&#10004;</span> <span class="hidden" data-form-validation-target="digitCross">&times;</span> At least 1 digit</p>
-        <p class="help-text my-1" data-form-validation-target="passwordSpecial"><span class="hidden" data-form-validation-target="specialCheck">&#10004;</span> <span class="hidden" data-form-validation-target="specialCross">&times;</span> At least 1 special character (#?!@$%^&*-)</p>
+        <p class="my-1 help-text" data-form-validation-target="passwordLength"><span class="hidden" data-form-validation-target="lengthCheck">&#10004;</span> <span class="hidden" data-form-validation-target="lengthCross">&times;</span> At least 6 characters</p>
+        <p class="my-1 help-text" data-form-validation-target="passwordUppercase"><span class="hidden" data-form-validation-target="uppercaseCheck">&#10004;</span> <span class="hidden" data-form-validation-target="uppercaseCross">&times;</span> At least 1 uppercase letter</p>
+        <p class="my-1 help-text" data-form-validation-target="passwordLowercase"><span class="hidden" data-form-validation-target="lowercaseCheck">&#10004;</span> <span class="hidden" data-form-validation-target="lowercaseCross">&times;</span> At least 1 lowercase letter</p>
+        <p class="my-1 help-text" data-form-validation-target="passwordDigit"><span class="hidden" data-form-validation-target="digitCheck">&#10004;</span> <span class="hidden" data-form-validation-target="digitCross">&times;</span> At least 1 digit</p>
+        <p class="my-1 help-text" data-form-validation-target="passwordSpecial"><span class="hidden" data-form-validation-target="specialCheck">&#10004;</span> <span class="hidden" data-form-validation-target="specialCross">&times;</span> At least 1 special character (#?!@$%^&*-)</p>
       </div>
     </div>
   </div>
 
-  <div class='form-group relative'>
+  <div class='relative form-group'>
     <%= f.label :password_confirmation, 'Confirm new password', class: "form-label transition duration-300 ease-in-out", data: { form_validation_target: 'newPasswordConfirmationLabel' } %>
     <div class="flex items-center" data-controller="password-visibility">
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-input transition duration-300 ease-in-out", data: { form_validation_target: "newPasswordConfirmation", action: "input->form-validation#validateNewPasswordConfirmation", password_visibility_target: "password" } %>
@@ -154,8 +154,8 @@
       </button>
     </div>
 
-    <span class="error-message hidden my-1" data-form-validation-target="newPasswordConfirmationError">Passwords do not match</span>
-    <p class="text-xs text-slate-700 my-1 dark:text-slate-400 transition-opacity duration-300 ease-in-out" data-form-validation-target="newPasswordConfirmationHint">Enter your new password again to confirm it.</p>
+    <span class="hidden my-1 error-message" data-form-validation-target="newPasswordConfirmationError">Passwords do not match</span>
+    <p class="my-1 text-xs transition-opacity duration-300 ease-in-out text-slate-700 dark:text-slate-400" data-form-validation-target="newPasswordConfirmationHint">Enter your new password again to confirm it.</p>
   </div>
 
   <div class='form-group'>
@@ -168,17 +168,17 @@
         <%= inline_svg_tag 'icons/eye-slash.svg', data: { password_visibility_target: 'hiddenIcon' }, class: 'size-6 hidden' %>
       </button>
     </div>
-    <p class="text-xs text-slate-700 my-1 dark:text-slate-400">Your current password is required to change your password.</p>
+    <p class="my-1 text-xs text-slate-700 dark:text-slate-400">Your current password is required to change your password.</p>
   </div>
 
-  <div class="flex items-center gap-4 pt-6 bg-white dark:bg-slate-900 border-t border-slate-200 dark:border-slate-700 sticky bottom-0 pb-6">
+  <div class="sticky bottom-0 flex items-center gap-4 pt-6 pb-6 bg-white border-t dark:bg-slate-900 border-slate-200 dark:border-slate-700">
     <%= f.submit 'Save', data: { turbo: false }, class: 'btn btn-primary' %>
     <%= link_to 'Cancel', :back, data: { turbo: false }, class: 'btn btn-white mr-auto' %>
-    <%= link_to 'Sign out', destroy_user_session_path, method: :delete, data: { turbo_method: :delete } , class: 'btn btn-destructive' %>
+    <%= link_to 'Sign out', destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: 'btn btn-destructive' %>
   </div>
 <% end %>
 
-<div class="pt-10 border-t my-10 border-slate-200 dark:border-slate-700 text-center">
+<div class="pt-10 my-10 text-center border-t border-slate-200 dark:border-slate-700">
   <p>Not happy with your experience?</p>
   <%= button_to 'Cancel your account', registration_path(resource_name),
               method: :delete,
