--- a/app/views/teams/forms/_form.html.erb
+++ b/app/views/teams/forms/_form.html.erb
@@ -95,7 +95,7 @@
     <p class="my-1 help-text">Set a goal for how many long runs you want your team to run collectively during the season.</p>
   </div>
 
-  <div class="flex flex-wrap items-center justify-start gap-6">
+  <div class="sticky bottom-0 flex items-center gap-6 pt-6 pb-6 bg-white border-t dark:bg-slate-900 border-slate-200 dark:border-slate-700 flex-wrap justify-start">
     <% if form.object.new_record? %>
       <%= form.submit 'Create team', data: { turbo: false }, class: 'btn btn-primary' %>
     <% else %>
