--- a/app/views/teams/member/_trends.html.erb
+++ b/app/views/teams/member/_trends.html.erb
@@ -1,6 +1,6 @@
 <div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
   <h1 class="heading">Trends</h1>
-  <p class="text-soft">Recent trends in <%= @member == current_user ? 'your' : "this user's" %> participation in <%= link_to @team.name, @team, class: 'btn-link' %>.</p>
+  <p class="text-soft">Recent trends in <%= @member == current_user ? 'your' : "#{member.first_name}'s" %> participation in <%= link_to @team.name, @team, class: 'btn-link' %>.</p>
 </div>
 
 <!-- Add graphs here -->
