--- a/app/views/users/_runs_today.html.erb
+++ b/app/views/users/_runs_today.html.erb
@@ -1,7 +1,7 @@
 <div class="flex flex-wrap items-center justify-between gap-6 pb-6 mt-10 border-b border-slate-200 dark:border-slate-700">
   <div class="space-y-2">
     <h1 class="heading">Runs Today</h1>
-    <p class="text-soft">Runs <%= user == current_user ? 'you have' : 'this user has' %> gone on today.</p>
+    <p class="text-soft">Runs <%= user == current_user ? 'you have' : "#{user.first_name} has" %> gone on today.</p>
   </div>
 
   <% runs_today = user.runs_today %>
