--- a/app/views/users/_teams.html.erb
+++ b/app/views/users/_teams.html.erb
@@ -1,7 +1,7 @@
 <div class="flex flex-wrap items-center justify-between gap-6 pb-6 mt-10 border-b border-slate-200 dark:border-slate-700">
   <div class="space-y-2">
-    <h1 class="heading"><%= user == current_user ? 'Your' : "#{user.default_name}'s" %> Teams</h1>
-    <p class="text-soft">Teams <%= user == current_user ? 'you are' : 'this user is' %> the coach of.</p>
+    <h1 class="heading"><%= user == current_user ? 'Your' : "#{user.first_name}'s" %> Teams</h1>
+    <p class="text-soft">Teams <%= user == current_user ? 'you are' : "#{user.first_name} is" %> the coach of.</p>
   </div>
 
   <% if user == current_user && owned_teams.present? %>
@@ -17,14 +17,14 @@
       <p class="prose dark:prose-invert text-soft">You don't have any teams yet.</p>
       <%= link_to 'New run', new_run_path, class: 'btn btn-primary' %>
     <% else %>
-      <p class="prose dark:prose-invert text-soft"><%= user.default_name %> doesn't have any teams yet.</p>
+      <p class="prose dark:prose-invert text-soft"><%= user.first_name %> doesn't have any teams yet.</p>
     <% end %>
   </div>
 <% end %>
 
 <div class="pb-6 mt-10 space-y-2 border-b dark:border-slate-700">
-  <h1 class="heading"><%= user == current_user ? 'Your' : "#{user.default_name}'s" %> Team Memberships</h1>
-  <p class="text-soft">Teams <%= user == current_user ? 'you are' : 'this user is' %> a member of.</p>
+  <h1 class="heading"><%= user == current_user ? 'Your' : "#{user.first_name}'s" %> Team Memberships</h1>
+  <p class="text-soft">Teams <%= user == current_user ? 'you are' : "#{user.first_name} is" %> a member of.</p>
 </div>
 
 <% if membered_teams.present? %>
