rename 'longest streak' to 'record streak'

--- a/app/views/teams/show/_rankings_table.html.erb
+++ b/app/views/teams/show/_rankings_table.html.erb
@@ -44,7 +44,7 @@
         </th>
         <th scope="col" data-action="click->sort-table#sort" data-sort-table-target="th" data-numeric="true" class="px-6 py-3 select-none whitespace-nowrap hover:cursor-pointer">
           <div class="flex items-center">
-            Longest streak
+            Record streak
             <%= inline_svg_tag 'icons/arrow-down.svg', class: 'size-3.5 ml-2 transition ease duration-200 hidden' %>
           </div>
         </th>
