--- a/app/views/teams/member/_member_info.html.erb
+++ b/app/views/teams/member/_member_info.html.erb
@@ -57,14 +57,14 @@
     </p>
   </div>
 
-  <!-- Longest Streak Card -->
+  <!-- Record Streak Card -->
   <% longest_streak_data = member.longest_streak(team) %>
   <% longest_streak = longest_streak_data[:streak] %>
   <% longest_streak_start_date = longest_streak_data[:start_date] %>
   <% longest_streak_end_date = longest_streak_data[:end_date] %>
 
   <div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
-    <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Longest Streak</h2>
+    <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Record Streak</h2>
     <p class="text-3xl font-bold">
       <%= longest_streak %>
       <span class="text-base font-normal text-soft"><%= 'day'.pluralize(longest_streak) %></span>
