--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -10,10 +10,22 @@
       <% end %>
     <% end %>
 
-    <% streak = run.user.current_streak(team)[:streak] if local_assigns[:team] %>
+    <% if local_assigns[:team] %>
+      <% streak_data = run.user.current_streak(team) %>
+      <% streak = streak_data[:streak] %>
+      <% streak_end_date = streak_data[:end_date] %>
+    <% end %>
+
     <div class="flex flex-wrap items-center gap-2">
       <%= render 'runs/long_run_badge' if local_assigns[:team] && run.long_run_for?(team) %>
-      <%= render 'runs/streak_badge', streak: streak if local_assigns[:team] && streak.positive? && (run.date.today? || run.date.yesterday?) %>
+      <% if local_assigns[:team] && streak.positive? %>
+        <% if run.date.today? && streak_end_date.today? %>
+          <%= render 'runs/streak_badge', streak: streak %>
+        <% elsif run.date.yesterday? %>
+          <%= render 'runs/streak_badge', streak: streak if streak_end_date.yesterday? %>
+          <%= render 'runs/streak_badge', streak: streak - 1 if streak_end_date.today? %>
+        <% end %>
+      <% end %>
     </div>
   </div>
 
