--- a/app/views/teams/show/_team_info.html.erb
+++ b/app/views/teams/show/_team_info.html.erb
@@ -26,13 +26,11 @@
     </div>
 
     <% if team.season_not_started_yet? %>
-      <p class='text-soft'>Season hasn't started yet.</p>
-    <% elsif team.season_over? %>
-      <p class='text-sm text-soft'>Season is over.</p>
+      <p class='my-1 text-soft'>Season hasn't started yet.</p>
     <% else %>
       <%= render 'shared/progress_bar', percentage: team.season_progress, label: 'Season Progress', size: :lg %>
 
-      <p class='my-1 text-xs text-soft'><%= team.days_remaining_in_season %> days remaining</p>
+      <p class='my-1 text-xs text-soft'><%= team.season_over? ? 'Season is over.' : "#{pluralize(team.days_remaining_in_season, 'days')} remaining in season." %></p>
     <% end %>
   <% else %>
     <p class="text-soft">No season dates have been set for this team.</p>
