--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,12 +1,12 @@
 <div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="editTab" class="max-w-3xl px-4 mx-auto my-16 mb-24">
   <div class="tab-container">
     <button type="button" id="editTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'editTab' ? 'btn-tab-active' : '' %>">
-      <%= inline_svg_tag 'icons/team.svg', class: 'size-5' %>
+      <%= inline_svg_tag 'icons/team.svg', class: 'size-5 text-soft' %>
       <span>Edit Team</span>
     </button>
 
     <button type="button" id="settingsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'settingsTab' ? 'btn-tab-active' : '' %>">
-      <%= inline_svg_tag 'icons/settings.svg', class: 'size-5' %>
+      <%= inline_svg_tag 'icons/settings.svg', class: 'size-5 text-soft' %>
       <span>Settings</span>
     </button>
   </div>
