--- a/app/views/teams/member.html.erb
+++ b/app/views/teams/member.html.erb
@@ -30,12 +30,12 @@
 
   <div class="tab-container">
     <button type="button" id="infoTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'infoTab' ? 'btn-tab-active' : '' %>">
-      <%= inline_svg_tag 'icons/info.svg', class: 'size-5' %>
+      <%= inline_svg_tag 'icons/info.svg', class: 'size-5 text-soft' %>
       <span>Member Info</span>
     </button>
 
     <button type="button" id="trendsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'trendsTab' ? 'btn-tab-active' : '' %>">
-      <%= inline_svg_tag 'icons/arrow-trending-up.svg', class: 'size-5' %>
+      <%= inline_svg_tag 'icons/arrow-trending-up.svg', class: 'size-5 text-soft' %>
       <span>Trends</span>
     </button>
   </div>
