--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,17 +15,17 @@
 
   <div class="tab-container">
     <button type="button" id="infoTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'infoTab' ? 'btn-tab-active' : '' %>">
-      <%= inline_svg_tag 'icons/info.svg', class: 'size-5' %>
+      <%= inline_svg_tag 'icons/info.svg', class: 'size-5 text-soft' %>
       <span>User Info</span>
     </button>
 
     <button type="button" id="teamsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'teamsTab' ? 'btn-tab-active' : '' %>">
-      <%= inline_svg_tag 'icons/team.svg', class: 'size-5' %>
+      <%= inline_svg_tag 'icons/team.svg', class: 'size-5 text-soft' %>
       <span>Teams</span>
     </button>
 
     <button type="button" id="runsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'runsTab' ? 'btn-tab-active' : '' %>">
-      <%= inline_svg_tag 'icons/runner.svg', class: 'size-5' %>
+      <%= inline_svg_tag 'icons/runner.svg', class: 'size-5 text-soft' %>
       <span>Runs</span>
     </button>
   </div>
